ajout document presentation

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <nav class="navbar headerNav">
                 <div class="headerNav__flex">
                     <div class="headerNav__flex--logo">
-                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
+                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                         <h1>Lindsay Lemire</h1>
                     </div>
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2 btn__active" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2 btn__active" href="index.html">Accueil</a>
+                        <a class="btn me-2" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </nav>
@@ -67,10 +67,10 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2 btn__active" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2 btn__active" href="index.html">Accueil</a>
+                        <a class="btn me-2" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </div>
@@ -80,8 +80,7 @@
 
                         <div class="navbar__burger--flex">
                             <div class="headerNav__flex--logo">
-                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve"
-                                    href="index.html">
+                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                                 <h1>Lindsay Lemire</h1>
                             </div>
 
