--- a/rollerskate.html
+++ b/rollerskate.html
@@ -46,16 +46,16 @@
             <nav class="navbar headerNav">
                 <div class="headerNav__flex">
                     <div class="headerNav__flex--logo">
-                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
+                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                         <h1>Lindsay Lemire</h1>
                     </div>
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2 btn__active" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2" href="index.html">Accueil</a>
+                        <a class="btn me-2 btn__active" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </nav>
@@ -67,10 +67,10 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2 btn__active" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2" href="index.html">Accueil</a>
+                        <a class="btn me-2 btn__active" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </div>
@@ -80,8 +80,7 @@
 
                         <div class="navbar__burger--flex">
                             <div class="headerNav__flex--logo">
-                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve"
-                                    href="index.html">
+                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                                 <h1>Lindsay Lemire</h1>
                             </div>
 
@@ -115,7 +114,7 @@
                 </div>
             </section>
 
-            <secion>
+            <section>
                 <div class="row row--cardrollerskate">
                     <div class="card col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
                         <img src="images/premiers-patins-plimpton.jpg" class="card-img-top"
@@ -135,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-            </secion>
+            </section>
 
             <section id="section__rollerskate">
                 <div class="row">
@@ -194,11 +193,12 @@
                             <input class="btn btn__card" type="submit" name="submit" id="submit">
 
                         </form>
-                        <script src="validation.js"></script>
+
                     </div>
             </section>
         </div>
         </div>
+        <script src="validation.js"></script>
     </main>
 
     <footer>
