--- a/automobile.html
+++ b/automobile.html
@@ -46,16 +46,16 @@
             <nav class="navbar headerNav">
                 <div class="headerNav__flex">
                     <div class="headerNav__flex--logo">
-                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
+                        <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                         <h1>Lindsay Lemire</h1>
                     </div>
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2 btn__active" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2" href="index.html">Accueil</a>
+                        <a class="btn me-2" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2 btn__active" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </nav>
@@ -67,10 +67,10 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
-                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2 btn__active" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2" href="index.html">Accueil</a>
+                        <a class="btn me-2" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" href="arts.html">Arts</a>
+                        <a class="btn me-2 btn__active" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </div>
@@ -80,8 +80,7 @@
 
                         <div class="navbar__burger--flex">
                             <div class="headerNav__flex--logo">
-                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve"
-                                    href="index.html">
+                                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve">
                                 <h1>Lindsay Lemire</h1>
                             </div>
 
@@ -137,17 +136,19 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <h2 class="h2--haut">Moi et mon auto !</h2>
                         <p>Je suis tombé en amour avec les autos durant mon cours d'infographie.<br>
-                        J'ai un mitsubishi lancer 2014 depuis 5 ans et c'est mon premier amour !<br>
-                        Ce n'est qu'un SE mais mon rêve serait d'avoir le modèle Evolution, j'ai un intérêt
-                        particulier pour les Lancer. J'ai des amis avec plusieurs modèles ils sont tous jolie mais
-                        ce qui retiens vraiment mon attention ce sont les Lancer !
-                    </p>
-                    <p>
-                        L'été dernier je suis aller dans les évênements à Mirabel et cela n'a fait que accentuer mon intérêt pour les autos.
-                        Donc cette année je me suis inscrit dans un gros groupe de fille au travers le Canada et je suis a créer mon propre groupe
-                        avec des amis.
-                    </p>
-                    <p>Je me suis inscrite dans les Ladies on wheels et j'ai créer Street evolution.</p>
+                            J'ai un mitsubishi lancer 2014 depuis 5 ans et c'est mon premier amour !<br>
+                            Ce n'est qu'un SE mais mon rêve serait d'avoir le modèle Evolution, j'ai un intérêt
+                            particulier pour les Lancer. J'ai des amis avec plusieurs modèles ils sont tous jolie mais
+                            ce qui retiens vraiment mon attention ce sont les Lancer !
+                        </p>
+                        <p>
+                            L'été dernier je suis aller dans les évênements à Mirabel et cela n'a fait que accentuer mon
+                            intérêt pour les autos.
+                            Donc cette année je me suis inscrit dans un gros groupe de fille au travers le Canada et je
+                            suis a créer mon propre groupe
+                            avec des amis.
+                        </p>
+                        <p>Je me suis inscrite dans les Ladies on wheels et j'ai créer Street evolution.</p>
                     </div>
                 </div>
             </section>
@@ -157,7 +158,8 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <h2 class="h2--haut">Vers les Ladies !</h2>
                         <div id="outdiv">
-                            <iframe class="iframe__website" src="https://www.ladiesonwheelslow.com/" scrolling="yes" width="100%" height="800px"></iframe>
+                            <iframe class="iframe__website" src="https://www.ladiesonwheelslow.com/" scrolling="yes"
+                                width="100%" height="800px"></iframe>
                         </div>
                     </div>
                 </div>
@@ -192,11 +194,11 @@
             </div>
         </div>
     </footer>
-    <script src="js/install.js"></script>
 </body>
 
 </html>
 
+<script src="js/install.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
 </script>
