--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
                 <div class="offset-xl-0 col-xl-6 offset-lg-0 col-lg-6 offset-md-0 col-md-6 col-sm-12 col-12">
                     <p>intégration des interfaces Web 2 - Projet Final</p>
                     <p>Lindsay Lemire</p>
+                    <a class="btn navbar__burger--flexbutton" id="btnInstall" aria-label="Install" hidden>Installer la
+                        PWA</a>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 footer--leftalign">
                     <img src="images/facebook-icon.png" class="footer__mediaicon" alt="Icon facebook">
@@ -231,8 +233,6 @@
                         <img src="images/mail.svg" class="footer__mediaicon" alt="Icon mail">
                         <a href="mailto:lindsay_lemire@hotmail.com">lindsay_lemire@hotmail.com</a>
                     </div>
-                    <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
-                        PWA</a>
                 </div>
             </div>
         </div>
