--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="offset-xl-0 col-xl-6 offset-lg-0 col-lg-6 offset-md-0 col-md-6 col-sm-12 col-12">
                     <p>intégration des interfaces Web 2 - Projet Final</p>
                     <p>Lindsay Lemire</p>
-                    <a class="btn navbar__burger--flexbutton" id="btnInstall" aria-label="Install" hidden>Installer la
+                    <a class="btn" id="btnInstall" aria-label="Install" hidden>Installer la
                         PWA</a>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 footer--leftalign">
